--- a/tesla.css
+++ b/tesla.css
@@ -3,6 +3,7 @@
 	height: auto;
 
 	background-image: url(hero-bg.png);
+	background-size: 100%;
 	background-repeat: no-repeat 0 0; 
 	background-position: center;
 	position: absolute;
@@ -18,27 +19,36 @@
 }
 
 .head ul {
+	list-style: none;
 	padding-right: 130px;
 	padding-top: 50px;
 	float: right;
 }
 
-.head li {
+.head ul li {
 	display: inline;
-	float: right;
-	padding: 3px 6px;
-	color: #adadad;
+	float: right;	
 }
 
-.head li:hover {
+.head ul li a{
+	color: #adadad;
+	text-decoration: none;
+	padding: 3px 6px;
+}
+
+.head ul li a:hover {
 	padding: 3px 6px;
 	color: #ffffff;
 }
 
 .presentation {
 	float: right;
-	padding-top: 120px;
-	padding-right: 10%;
+	padding-top: 140px;
+
+	margin-right: 10%;
+	padding-bottom: 160px;
+	background: url(bullets_bottom.png)no-repeat bottom left;
+	
 }
 
 .presentation h1 {
@@ -49,29 +59,37 @@
 .presentation p {
 	padding-top: 20px;
 	color: #cdcdcd;
+	padding-bottom: 40px;
 }
 
-.presentation h2 {
-	margin-top: 50px;
-	border: 8px solid white;
-	height: 60px;
-	width: 230px;
+.presentation a{
+	border: 2px solid white;
+	width: 120px;
 	text-align: center;
 	color: #ffffff;
-	padding-top: 20px;
+	padding: 9px 16px 5px;
 	font-size: 25px;
+	text-decoration: none;
 }
 
-.circle {
+.button ul{
 	float: left;
-	padding-top: 230px;
+	padding-top: 200px;
 	padding-left: 85px;
 }
 
-.circle a{
-	background: #9a9ca9;
-	list-style-type: circle;
-	padding-top: 3px;
-	padding-left: 20px;
-	border-radius: 20px;
+.button ul li {
+	background-color: #9a9ca9;
+	padding: 15px 15px;
+	margin-top: 24px;
+	border-radius: 50%;
+}
+
+.button ul li:hover{
+	padding: 30px 30px;
+	margin-top: 27px;
+	border-radius: 50%;
+	border: solid 1px;
+	border-color: white;
+	background-color: transparent;
 }
